--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import "components/profile-photo"; // Croppie Profile Photo SCSS
+@import "components/toastr"; // Toastr Notifications
+
+
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
