--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10655,6 +10655,17 @@ a.text-dark:focus {
   }
 }
 
+.dropdown-toggle-avatar {
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  margin-right: 0;
+  border: 2px solid #eee;
+}
+
 .croppie-container {
   width: 100%;
   height: 100%;
