--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Plugins
+@import 'plugins/select2';
+
 @import 'components/global'; // Global SCSS
 @import "components/profile-photo"; // Croppie Profile Photo SCSS
 @import "components/toastr"; // Toastr Notifications
