--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11305,6 +11305,16 @@ a.text-dark:focus {
   border: 2px solid #eee;
 }
 
+.profile-avatar {
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0;
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  margin-right: 0;
+}
+
 .croppie-container {
   width: 100%;
   height: 100%;
