--- a/resources/sass/components/_global.scss
+++ b/resources/sass/components/_global.scss
@@ -7,3 +7,12 @@
     margin-right: 0;
     border: 2px solid #eee;
 }
+
+.profile-avatar {
+  object-fit: cover;
+  margin: 0;
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  margin-right: 0;
+}
