Adds styling to homepage

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: "Open Sans", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -13,8 +13,11 @@ $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
 $red: #e3342f;
-$orange: #f6993f;
+$orange: #F29500;
+$dark-orange:#CC7E00;
 $yellow: #ffed4a;
-$green: #38c172;
+$green: #99B247;
+$dark-green: #5E6D2C;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$grey: #808080;
