--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 
 // Variables
 @import 'variables';
@@ -14,6 +14,7 @@
 @import 'components/global'; // Global SCSS
 @import "components/profile-photo"; // Croppie Profile Photo SCSS
 @import "components/toastr"; // Toastr Notifications
+@import "components/home"; //Styles for the homepage
 
 .navbar-laravel {
   background-color: #fff;
