--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import "components/profile-photo"; // Croppie Profile Photo SCSS
 @import "components/toastr"; // Toastr Notifications
 @import "components/home"; //Styles for the homepage
+@import "components/search";
 
 .navbar-laravel {
   background-color: #fff;
