--- a/resources/sass/components/_global.scss
+++ b/resources/sass/components/_global.scss
@@ -36,11 +36,11 @@ body {
 }
 
 .btn-secondary {
-    background-color:$orange;
+    background-color:$green;
     color:$white;
     border:0;
     &:hover {
-        background-color:$dark-orange;
+        background-color:$dark-green;
     }
 }
 
