--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,7 @@
 @import "components/toastr"; // Toastr Notifications
 @import "components/home"; //Styles for the homepage
 @import "components/search";
+@import "components/nav";
 
 .navbar-laravel {
   background-color: #fff;
