--- a/resources/sass/components/_global.scss
+++ b/resources/sass/components/_global.scss
@@ -45,7 +45,11 @@ body {
 }
 
 .jumbotron {
-    background-color:transparent;
+    background-color: transparent;
+}
+
+.card {
+    border: 0 none;
 }
 
 //Global Form stylesheet
