--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11317,8 +11317,8 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   margin: 0;
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   border-radius: 100%;
   margin-right: 0;
 }
@@ -11362,6 +11362,10 @@ body {
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
   color: #000 !important;
+}
+
+.w-15 {
+  width: 15% !important;
 }
 
 .croppie-container {
