Created the Add Recipe page JS

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11351,6 +11351,11 @@ body {
   border: 0 none;
 }
 
+.add-recipe-card {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
 .select2-container--default .select2-selection__choice {
   background-color: #98B247 !important;
   color: #fff !important;
