Changes to Select2 styling

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,7 +36,8 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~toastr/toastr.scss';
 @import '~croppie/croppie.css';
-@import 'plugins/select2';
+// @import '~select2/dist/css/select2.css';
+// @import '~select2/select2-bootstrap4.css';
 
 /*
 |--------------------------------------------------------------------------
