--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11248,7 +11248,7 @@ body {
   background-color: transparent;
 }
 
-.card {
+.add-recipe-card {
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
   border-top: 0 !important;
@@ -11265,6 +11265,15 @@ body {
 
 .select2 {
   width: 100% !important;
+}
+
+#progress-inputs {
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.progress-bar-success {
+  background-color: #98B247;
 }
 
 .card.transparent {
