--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11191,8 +11191,7 @@ button.toast-close-button {
 */
 
 body {
-  background-color: rgba(0, 0, 0, 0.3);
-  background-image: url(https://source.unsplash.com/1600x900/?recipes,food);
+  background-color: #fff;
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: overlay;
@@ -11276,6 +11275,19 @@ body {
   background-color: #98B247;
 }
 
+.position-relative {
+  position: relative;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.top-right {
+  top: -10px;
+  right: -10px;
+}
+
 .card.transparent {
   background-color: transparent !important;
   color: #fff;
@@ -11332,5 +11344,81 @@ body {
   color: #000;
   padding-right: 0.7rem;
   padding-left: 0.7rem;
+}
+
+.item-feature {
+  margin: 0px;
+}
+
+.item-feature ul {
+  margin-left: -1px;
+  margin-right: -1px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item-feature ul li {
+  margin-top: 2px;
+  max-width: 25%;
+  flex: 0 0 25%;
+  padding-left: 1px;
+  padding-right: 1px;
+}
+
+@media only screen and (max-width: 767px) {
+  .item-feature ul li {
+    max-width: 50%;
+    flex: 0 0 50%;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .item-feature ul li {
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+}
+
+.item-feature ul li .feature-wrap {
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: center;
+}
+
+.item-feature ul li .media {
+  height: 100%;
+  padding: 12px 5px;
+  align-items: center;
+}
+
+.item-feature ul li .feature-icon {
+  font-size: 24px;
+  line-height: 1;
+}
+
+.item-feature ul li .feature-icon i,
+.item-feature ul li .feature-icon i:before {
+  font-size: 30px;
+  color: #a8a8a8;
+}
+
+.item-feature ul li .feature-title {
+  font-size: 18px;
+  color: #111111;
+}
+
+.heart {
+  width: 100px;
+  height: 100px;
+  background: url("/images/heart.png") no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+  transition: background-position 1s steps(28);
+  transition-duration: 0s;
+}
+
+.heart.is-active {
+  transition-duration: 1s;
+  background-position: -2800px 0;
 }
 
