--- a/resources/sass/components/_global.scss
+++ b/resources/sass/components/_global.scss
@@ -25,10 +25,11 @@ body {
 .profile-avatar {
   object-fit: cover;
   margin: 0;
-  height: 120px;
-  width: 120px;
+  height: 100px;
+  width: 100px;
   border-radius: 100%;
   margin-right: 0;
+  border: 2px solid #eee;
 }
 
 //Buttons
