--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11423,3 +11423,19 @@ body {
   background-position: -2800px 0;
 }
 
+.bg-grey-ish {
+  background-color: #f2f2f2;
+}
+
+.ingredients-section {
+  padding: 1.25rem;
+}
+
+.ingredients-section .list-group .list-group-item:hover {
+  background-color: #f9f9f9;
+}
+
+.bg-shadow {
+  box-shadow: 0px 0px 27px 0px rgba(0, 0, 0, 0.13);
+}
+
