--- a/resources/sass/components/_global.scss
+++ b/resources/sass/components/_global.scss
@@ -101,3 +101,17 @@ body {
   top: -10px;
   right: -10px;
 }
+
+.hr-short {
+  position: relative;
+  border-bottom: 1px solid #d7d7d7;
+}
+.hr-short:before {
+    position: absolute;
+    content: "";
+    bottom: -2px;
+    left: 0;
+    background-color: $primary;
+    height: 4px;
+    width: 50px;
+}
