Added more sections to Individual Recipe Page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -67,3 +67,4 @@
 @import 'components/search';
 @import 'components/nav';
 @import 'components/individual-recipe-page';
+@import 'components/social-buttons';
