--- a/resources/sass/components/_global.scss
+++ b/resources/sass/components/_global.scss
@@ -4,6 +4,7 @@ body {
   background-repeat:no-repeat;
   background-size:cover;
   background-blend-mode: overlay;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -126,4 +127,39 @@ body {
   }
 
   color: #000;
+}
+
+.bg-shadow {
+  box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.13);
+  -webkit-transition: width 2s; /* Safari */
+  transition: width 2s;
+  transition: box-shadow .3s;
+}
+
+.bg-shadow:hover {
+  box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.25) !important;
+}
+
+.list-inline-item-padding:not(:last-child) {
+    margin-right: 1rem !important;
+}
+
+
+.mb-6 {
+  margin-bottom: 6rem !important;
+}
+
+.mb-7 {
+  margin-bottom: 7rem !important;
+}
+
+.mb-8 {
+  margin-bottom: 8rem !important;
+}
+
+.mb-9 {
+  margin-bottom: 9rem !important;
+}
+.mb-10 {
+  margin-bottom: 10rem !important;
 }
