--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,4 +68,4 @@
 @import 'components/nav';
 @import 'components/individual-recipe-page';
 @import 'components/social-buttons';
-@import 'components/team2';
+@import 'components/team';
