--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11182,12 +11182,8 @@ button.toast-close-button {
 
 /*
 |--------------------------------------------------------------------------
-| Components
+| Global
 |--------------------------------------------------------------------------
-| 1. Global
-| 2. home
-| 3. search
-| 4. nav
 */
 
 body {
@@ -11260,10 +11256,6 @@ body {
   border-bottom: 0 !important;
 }
 
-.w-15 {
-  width: 15% !important;
-}
-
 .select2 {
   width: 100% !important;
 }
@@ -11290,6 +11282,14 @@ body {
   right: -10px;
 }
 
+.w-15 {
+  width: 15% !important;
+}
+
+.w-20 {
+  min-width: 20px;
+}
+
 .hr-short {
   position: relative;
   border-bottom: 1px solid #d7d7d7;
@@ -11305,16 +11305,20 @@ body {
   width: 50px;
 }
 
-.w-20 {
-  min-width: 20px;
-}
-
 .section-title {
   color: #000;
 }
 
 .section-title span {
   color: #007bff !important;
+}
+
+.list-inline-item-padding:not(:last-child) {
+  margin-right: 1rem !important;
+}
+
+.rounded-2 {
+  border-radius: 2rem;
 }
 
 .bg-shadow {
@@ -11326,10 +11330,6 @@ body {
 
 .bg-shadow:hover {
   box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.25) !important;
-}
-
-.list-inline-item-padding:not(:last-child) {
-  margin-right: 1rem !important;
 }
 
 .mb-6 {
@@ -11351,6 +11351,12 @@ body {
 .mb-10 {
   margin-bottom: 10rem !important;
 }
+
+/*
+|--------------------------------------------------------------------------
+| Components
+|--------------------------------------------------------------------------
+*/
 
 .card.transparent {
   background-color: transparent !important;
@@ -11907,5 +11913,20 @@ a.btn-social,
 
 .card-profile .card-profile-footer {
   padding-bottom: 0.5rem;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  display: inline-block;
+  padding-right: 0.5rem;
+  color: #fff;
+  content: "/";
+}
+
+.breadcrumb-item.active {
+  color: #cfd8dc;
+}
+
+.breadcrumb {
+  background-color: #007bff !important;
 }
 
