Some CSS changes to variables and started on new about page

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,3 +22,8 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $grey: #808080;
 $light-font: #cfd8dc;
+$primary: #91ad41;
+
+$theme-colors: (
+  primary: #91ad41,
+) !default;
