--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11336,6 +11336,10 @@ body {
   border-radius: 2rem;
 }
 
+.btn-outline-primary:hover {
+  color: #fff !important;
+}
+
 .bg-shadow {
   box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.13);
   /* Safari */
