WIP: About page

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,6 +23,7 @@ $cyan: #6cb2eb;
 $grey: #808080;
 $light-font: #cfd8dc;
 $primary: #91ad41;
+$faded-green: #f7f9ef;
 
 $theme-colors: (
   primary: #91ad41,
