--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,6 +38,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~toastr/toastr.scss';
 @import '~croppie/croppie.css';
+
 // @import '~select2/dist/css/select2.css';
 // @import '~select2/select2-bootstrap4.css';
 
@@ -76,3 +77,5 @@
 @import 'components/social-buttons';
 @import 'components/team';
 @import 'components/breadcrumb';
+@import 'components/slider';
+@import 'components/favouriting';
