--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11340,6 +11340,10 @@ body {
   color: #fff !important;
 }
 
+.btn-rounded {
+  border-radius: 2rem !important;
+}
+
 .bg-shadow {
   box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.13);
   /* Safari */
@@ -11349,6 +11353,10 @@ body {
 
 .bg-shadow:hover {
   box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.25) !important;
+}
+
+.bg-faded {
+  background-color: #f7f9ef;
 }
 
 .mb-6 {
@@ -11947,5 +11955,351 @@ a.btn-social,
 
 .breadcrumb {
   background-color: #91ad41 !important;
+}
+
+.range-slider {
+  width: 100%;
+}
+
+.range-slider__range {
+  -webkit-appearance: none;
+  width: calc(100% - (73px));
+  height: 10px;
+  border-radius: 5px;
+  background: #d7dcdf;
+  outline: none;
+  padding: 0;
+  margin: 0;
+}
+
+.range-slider__range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+          appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #000;
+  cursor: pointer;
+  transition: background 0.15s ease-in-out;
+}
+
+.range-slider__range::-webkit-slider-thumb:hover {
+  background: #91ad41;
+}
+
+.range-slider__range:active::-webkit-slider-thumb {
+  background: #91ad41;
+}
+
+.range-slider__range::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border: 0;
+  border-radius: 50%;
+  background: #000;
+  cursor: pointer;
+  transition: background 0.15s ease-in-out;
+}
+
+.range-slider__range::-moz-range-thumb:hover {
+  background: #91ad41;
+}
+
+.range-slider__range:active::-moz-range-thumb {
+  background: #91ad41;
+}
+
+.range-slider__range:focus::-webkit-slider-thumb {
+  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #91ad41;
+}
+
+.range-slider__value {
+  display: inline-block;
+  position: relative;
+  width: 60px;
+  color: #fff;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 3px;
+  background: #000;
+  padding: 5px 10px;
+  margin-left: 8px;
+}
+
+.range-slider__value:after {
+  position: absolute;
+  top: 8px;
+  left: -7px;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-right: 7px solid #000;
+  border-bottom: 7px solid transparent;
+  content: "";
+}
+
+::-moz-range-track {
+  background: #d7dcdf;
+  border: 0;
+}
+
+input::-moz-focus-inner,
+input::-moz-focus-outer {
+  border: 0;
+}
+
+.Fav {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+}
+
+.Fav-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.Fav-checkbox:checked ~ .Fav-bloom {
+  -webkit-animation: background 0.5s ease both;
+          animation: background 0.5s ease both;
+}
+
+.Fav-checkbox:checked ~ .Fav-sparkle .Fav-sparkle-line::before {
+  -webkit-animation: line 1s ease both;
+          animation: line 1s ease both;
+}
+
+.Fav-checkbox:checked ~ .Fav-star {
+  -webkit-animation: star 1s ease both;
+          animation: star 1s ease both;
+}
+
+.Fav-label {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.Fav-label-text {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.Fav-bloom {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  border-width: 0;
+  border-style: solid;
+  border-color: #ffa624;
+  will-change: border-width;
+}
+
+.Fav-sparkle-line {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.Fav-sparkle-line::before {
+  position: absolute;
+  z-index: 1;
+  top: 30%;
+  width: 4px;
+  height: 0;
+  left: calc(50% - 2px);
+  border-radius: 2px;
+  background: #fa733e;
+  will-change: top, height;
+  content: "";
+}
+
+.Fav-sparkle-line:nth-child(1) {
+  -webkit-transform: rotate(40deg);
+          transform: rotate(40deg);
+}
+
+.Fav-sparkle-line:nth-child(2) {
+  -webkit-transform: rotate(110deg);
+          transform: rotate(110deg);
+}
+
+.Fav-sparkle-line:nth-child(3) {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.Fav-sparkle-line:nth-child(4) {
+  -webkit-transform: rotate(250deg);
+          transform: rotate(250deg);
+}
+
+.Fav-sparkle-line:nth-child(5) {
+  -webkit-transform: rotate(320deg);
+          transform: rotate(320deg);
+}
+
+.Fav-star {
+  z-index: 1;
+  padding: 18px;
+  width: 100%;
+  height: 100%;
+  fill: #dee0e0;
+}
+
+@-webkit-keyframes line {
+  0% {
+    top: 30%;
+    height: 0;
+  }
+
+  40% {
+    opacity: 1;
+    height: 14px;
+  }
+
+  100% {
+    opacity: 0;
+    top: 10%;
+    height: 0;
+  }
+}
+
+@keyframes line {
+  0% {
+    top: 30%;
+    height: 0;
+  }
+
+  40% {
+    opacity: 1;
+    height: 14px;
+  }
+
+  100% {
+    opacity: 0;
+    top: 10%;
+    height: 0;
+  }
+}
+
+@-webkit-keyframes star {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+
+  20% {
+    fill: #ffac33;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  30% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  60% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+
+  70% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+
+  100% {
+    fill: #ffac33;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes star {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+
+  20% {
+    fill: #ffac33;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  30% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  60% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+
+  70% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+
+  100% {
+    fill: #ffac33;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes background {
+  0% {
+    border-width: 50px;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  90% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+
+  100% {
+    border-width: 0;
+  }
+}
+
+@keyframes background {
+  0% {
+    border-width: 50px;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  90% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+
+  100% {
+    border-width: 0;
+  }
+}
+
+.Caption {
+  color: #ffac33;
 }
 
