--- a/resources/sass/global/_background.scss
+++ b/resources/sass/global/_background.scss
@@ -8,3 +8,7 @@
 .bg-shadow:hover {
   box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.25) !important;
 }
+
+.bg-faded {
+  background-color: $faded-green;
+}
